--- a/mod.conf
+++ b/mod.conf
@@ -1,7 +1,7 @@
 name = hilfe
 depends = default
 optional_depends = unified_inventory, inventory_plus
-description = This mod helps beginners understand Minetest (currently only in German language).
+description = This mod helps beginners understand Minetest/Luanti (currently only in German language).
 title = Hilfe
 author = mmm-sued
 min_minetest_version = 5.3
