--- a/mod.conf
+++ b/mod.conf
@@ -1,7 +1,7 @@
 name = hilfe
-depends = default
+depends =
 optional_depends = unified_inventory, inventory_plus
 description = This mod helps beginners understand Minetest/Luanti (currently only in German language).
 title = Hilfe
-author = mmm-sued
+author = mmmsued
 min_minetest_version = 5.3
